<resources>
    <string name="app_name">GDCA</string>
    <string name="Bouton_go_contact">Contact</string>
    <string name="Bouton_go_parametre">Paramètres</string>
    <string name="Bouton_retour">Retour</string>
    <string name="Bouton_menu">Menu</string>
    <string name="Bouton_acceuil">Acceuil</string>
    <string name="Preference">Preference</string>
    <string name="APropos">A propos</string>
    <string name="AppelerUnExpert">Appeler un expert</string>
    <string name="TrouverMecanicienAProximite">Trouver un mecanicien a proximite</string>
    <string name="Quitter">Quitter</string>
    <string name="Aide">Aide</string>
    <string name="Partie">Parties</string>
    <string name="TexteContact">Si aucun de vos problèmes n\'a ete trouve veuillez vous referer à un professionel</string>
    <string name="Selle">Selle</string>
        <string name="Coque">Coque</string>
            <string name="Coque_Fissures_ou_domages_à_la_coque_de_la_selle">Fissures ou dommages à la coque de la selle</string>
            <string name="Coque_Fissures_ou_domages_à_la_coque_de_la_selle_desc">Affaiblissement de la structure, risque de rupture\nExaminer la coque de la selle pour detecter les fissures et remplacer la selle si necessaire</string>
            <string name="Coque_Confort_inadequat_de_la_selle">Confort inadequat de la selle</string>
            <string name="Coque_Confort_inadequat_de_la_selle_desc">Douleur et inconfort pendant la conduite\nChoisir une selle adaptee à sa morphologie, ajuster la position de la selle</string>
            <string name="Coque_Instabilite_de_la_selle">Instabilite de la selle</string>
            <string name="Coque_Instabilite_de_la_selle_desc">Risque de glissement ou de desequilibre pendant la conduite\nVerifier et ajuster le serrage de la selle, utiliser des dispositifs de serrage supplementaires si necessaire</string>
        <string name="Rembourrage">Rembourrage</string>
            <string name="Rembourrage_Affaissement_ou_degradation_du_rembourrage">Affaissement ou degradation du rembourrage</string>
            <string name="Rembourrage_Affaissement_ou_degradation_du_rembourrage_desc">Confort reduit, pression excessive sur les points de contact\nRemplacer le rembourrage use ou endommage, opter pour un rembourrage de meilleure qualite</string>
            <string name="Rembourrage_Irritation_de_la_peau_ou_eruption_cutanee">Irritation de la peau ou eruption cutanee</string>
            <string name="Rembourrage_Irritation_de_la_peau_ou_eruption_cutanee_desc">Frottement excessif, transpiration accumulee\nUtiliser un revêtement de selle anti-transpiration, porter des shorts de cyclisme avec un rembourrage integre</string>
            <string name="Rembourrage_Absence_de_rembourrage_adequat">Absence de rembourrage adequat</string>
            <string name="Rembourrage_Absence_de_rembourrage_adequat_desc">Inconfort pendant la conduite, douleurs au niveau des fessiers\nChoisir une selle avec un rembourrage adapte à son type de conduite, utiliser des coussinets de selle supplementaires si necessaire</string>
        <string name="Revetement">Revêtement</string>
            <string name="Revetement_Dechirure_ou_usure_du_revêtement">Dechirure ou usure du revêtement</string>
            <string name="Revetement_Dechirure_ou_usure_du_revêtement_desc">Confort reduit, exposition du rembourrage, risque de blessure\nRemplacer le revêtement endommage, choisir un materiau resistant et durable</string>
            <string name="Revetement_Glissement_du_revêtement">Glissement du revêtement</string>
            <string name="Revetement_Glissement_du_revêtement_desc">Instabilite pendant la conduite, perte de contrôle\nUtiliser un revêtement antiderapant, verifier l\'ajustement de la selle, ajuster la tension du revêtement si possible</string>
            <string name="Revetement_Irritation_de_la_peau_ou_eruption_cutanee">Irritation de la peau ou eruption cutanee</string>
            <string name="Revetement_Irritation_de_la_peau_ou_eruption_cutanee_desc">Frottement excessif, transpiration accumulee\nUtiliser un revêtement de selle anti-transpiration, porter des shorts de cyclisme avec un rembourrage integre</string>
        <string name="Rails">Rails</string>
            <string name="Rails_Cassure_ou_fissure_des_rails">Cassure ou fissure des rails</string>
            <string name="Rails_Cassure_ou_fissure_des_rails_desc">Instabilite de la selle, risque de chute\nRemplacer les rails endommages, choisir des rails de haute qualite</string>
            <string name="Rails_Deterioration_de_la_fixation">Deterioration de la fixation</string>
            <string name="Rails_Deterioration_de_la_fixation_desc">Selle mal fixee, risque de deplacement pendant la conduite\nVerifier et resserrer regulièrement les fixations, utiliser des outils appropries</string>
            <string name="Rails_Mauvaise_compatibilite_avec_la_tige_de_selle">Mauvaise compatibilite avec la tige de selle</string>
            <string name="Rails_Mauvaise_compatibilite_avec_la_tige_de_selle_desc">Incompatibilite de taille, selle instable\nVerifier la compatibilite avant l\'achat, utiliser des adaptateurs si necessaire</string>
        <string name="Tige">Tige</string>
            <string name="Tige_Glissement_de_la_tige_de_selle">Glissement de la tige de selle</string>
            <string name="Tige_Glissement_de_la_tige_de_selle_desc">Selle instable, inconfort, risque de chute\nNettoyer et graisser regulièrement la tige de selle, verifier et resserrer les serrages, utiliser une pince adaptee</string>
            <string name="Tige_Cassure_ou_fissure_de_la_tige_de_selle">Cassure ou fissure de la tige de selle</string>
            <string name="Tige_Cassure_ou_fissure_de_la_tige_de_selle_desc">Selle instable, risque de chute\nRemplacer la tige de selle endommagee, choisir une tige de selle de haute qualite et adaptee au cadre</string>
            <string name="Tige_Incompatibilite_de_taille_entre_la_tige_de_selle_et_le_cadre">Incompatibilite de taille entre la tige de selle et le cadre</string>
            <string name="Tige_Incompatibilite_de_taille_entre_la_tige_de_selle_et_le_cadre_desc">Mauvaise fixation de la selle, risque de deplacement pendant la conduite\nVerifier la compatibilite avant l\'achat, utiliser des adaptateurs si necessaire</string>
    <string name="Guidon">Guidon</string>
        <string name="Potence">Potence</string>
            <string name="Potence_Jeu_dans_la_potence">Jeu dans la potence</string>
            <string name="Potence_Jeu_dans_la_potence_desc">Manque de stabilite, risque de perte de contrôle\nVerifier et resserrer les serrages, remplacer les pièces usees, ajuster le jeu selon les specifications du fabricant</string>
            <string name="Potence_Cassure_ou_fissure_de_la_potence">Cassure ou fissure de la potence</string>
            <string name="Potence_Cassure_ou_fissure_de_la_potence_desc">Perte de contrôle, risque de chute\nRemplacer la potence endommagee, choisir une potence de haute qualite et adaptee au diamètre du pivot de fourche</string>
            <string name="Potence_Incompatibilite_de_taille_entre_la_potence_et_le_pivot_de_fourche">Incompatibilite de taille entre la potence et le pivot de fourche</string>
            <string name="Potence_Incompatibilite_de_taille_entre_la_potence_et_le_pivot_de_fourche_desc">Mauvaise fixation du guidon, risque de deplacement pendant la conduite\nVerifier la compatibilite avant l\'achat, utiliser des adaptateurs si necessaire</string>
        <string name="Cintre">Cintre</string>
            <string name="Cintre_mal_positionne_ou_mal_fixe">Cintre mal positionne ou mal fixe</string>
            <string name="Cintre_mal_positionne_ou_mal_fixe_desc">Perte de contrôle, inconfort, risque de chute\nVerifier et ajuster la position du cintre, resserrer les fixations</string>
            <string name="Cintre_trop_etroit_ou_trop_large">Cintre trop etroit ou trop large</string>
            <string name="Cintre_trop_etroit_ou_trop_large_desc">Manque de contrôle, inconfort, douleurs au niveau des epaules et du dos\nChoisir un cintre adapte à la morphologie et aux preferences du cycliste, ajuster la largeur si necessaire</string>
            <string name="Cintre_endommage_ou_fissure">Cintre endommage ou fissure</string>
            <string name="Cintre_endommage_ou_fissure_desc">Perte de contrôle, risque de rupture, risque de chute\nRemplacer le cintre endommage par un neuf de qualite, inspecter regulièrement pour detecter les signes d\'usure ou de dommage</string>
        <string name="ManetteDeVitesse">Manette de vitesse</string>
            <string name="Manette_de_vitesse_bloquee_ou_coincee">Manette de vitesse bloquee ou coincee</string>
            <string name="Manette_de_vitesse_bloquee_ou_coincee_desc">Perte de contrôle, impossibilite de changer de vitesses, risque de chute\nVerifier et nettoyer la manette, lubrifier les composants, remplacer si necessaire</string>
            <string name="Manette_de_vitesse_qui_ne_senclenche_pas_correctement">Manette de vitesse qui ne s\'enclenche pas correctement</string>
            <string name="Manette_de_vitesse_qui_ne_senclenche_pas_correctement_desc">Difficulte à passer les vitesses, perte de performance, inconfort\nAjuster les reglages de la manette, verifier les câbles et gaines, remplacer les elements uses ou endommages</string>
            <string name="Manette_de_vitesse_endommagee_ou_cassee">Manette de vitesse endommagee ou cassee</string>
            <string name="Manette_de_vitesse_endommagee_ou_cassee_desc">Impossibilite de changer de vitesses, perte de contrôle, risque de chute\nRemplacer la manette de vitesse defectueuse par une nouvelle, effectuer les reglages necessaires</string>
        <string name="Poignees">Poignees</string>
            <string name="Poignees_usees_ou_degradees">Poignees usees ou degradees</string>
            <string name="Poignees_usees_ou_degradees_desc">Perte d\'adherence, inconfort, risque de glissement des mains\nRemplacer les poignees usees par des nouvelles, choisir des poignees adaptees à l\'usage</string>
            <string name="Poignees_mal_fixees">Poignees mal fixees</string>
            <string name="Poignees_mal_fixees_desc">Instabilite, risque de perte de contrôle, inconfort\nVerifier et resserrer les fixations des poignees, utiliser un adhesif de qualite pour une meilleure adherence</string>
            <string name="Poignees_inadaptees_à_la_morphologie_de_lutilisateur">Poignees inadaptees à la morphologie de l\'utilisateur</string>
            <string name="Poignees_inadaptees_à_la_morphologie_de_lutilisateur_desc">Inconfort, engourdissement des mains, risque de blessure\nChoisir des poignees ergonomiques et adaptees à la taille des mains, ajuster leur position</string>
        <string name="Barends">Bar-ends</string>
            <string name="Barends_mal_fixes">Bar-ends mal fixes</string>
            <string name="Barends_mal_fixes_desc">Instabilite, risque de perte de contrôle, inconfort\nVerifier et resserrer les fixations des bar-ends, utiliser des outils adaptes</string>
            <string name="Barends_endommages_ou_fissures">Bar-ends endommages ou fissures</string>
            <string name="Barends_endommages_ou_fissures_desc">Risque de rupture, blessures en cas de chute\nRemplacer les bar-ends endommages par des neufs de qualite, eviter les chocs violents</string>
            <string name="Barends_inadaptes_à_la_morphologie_de_lutilisateur">Bar-ends inadaptes à la morphologie de l\'utilisateur</string>
    <string name="Frein">Frein</string>
    <string name="Cadre">Cadre</string>
    <string name="Suspension">Suspension</string>
    <string name="Pedalier">Pedalier</string>
    <string name="Roue">Roue</string>
</resources>