<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/icon_menubar" android:id="@+id/go_param"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@drawable/back_arrow_icon"
            android:id="@+id/go_back2"
            android:scaleType="fitCenter" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/Bouton_go_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/Nom_page"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.117" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@id/go_param"/>
    <TextView
            android:text="@string/TexteContact"
            android:layout_width="295dp"
            android:layout_height="87dp" android:id="@+id/BasicTextContact"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/Nom_page" app:layout_constraintVertical_bias="0.074"
            android:layout_marginBottom="109dp" app:layout_constraintBottom_toTopOf="@+id/contact_pro"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/b_retour"
            app:layout_constraintTop_toBottomOf="@+id/Nom_page"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:text="@string/Bouton_retour"
            app:layout_constraintHorizontal_bias="0.468" app:layout_constraintVertical_bias="0.864"/>
    <Button
            android:text="@string/AppelerUnExpert"
            android:layout_width="306dp"
            android:layout_height="67dp" android:id="@+id/contact_pro"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BasicTextContact" android:layout_marginTop="164dp"
            app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/TrouverMecanicienAProximite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/reparation_proximite"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_pro" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>