<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
>

    <TextView
            android:text="@string/Aide"
            android:layout_width="161dp"
            android:layout_height="55dp" android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.054"
            app:autoSizeTextType="uniform" android:fontFamily="sans-serif-black" app:barrierMargin="3pt"
            android:background="#FFF443" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/b_retour"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/Bouton_retour" app:layout_constraintVertical_bias="0.841"/>
    <ImageView
            android:layout_width="320dp"
            android:layout_height="440dp" android:src="@drawable/bike_fullpicture" android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintBottom_toTopOf="@id/b_retour" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/icon_menubar" android:id="@+id/menuBar"
            android:scaleType="fitCenter"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/textView"
            app:layout_constraintTop_toTopOf="@id/textView" app:layout_constraintBottom_toTopOf="@id/imageView2"
            android:contentDescription="@string/Bouton_menu" app:layout_constraintHorizontal_bias="0.613"
            app:layout_constraintVertical_bias="0.0"
    />
    <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp" app:srcCompat="@drawable/back_arrow_icon"
            android:id="@+id/RetourButton"
            android:scaleType="fitCenter" app:layout_constraintLeft_toRightOf="@id/textView"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/textView"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintBottom_toTopOf="@id/imageView2" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/Bouton_retour"/>

</androidx.constraintlayout.widget.ConstraintLayout>